// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Install command > should run fresh installation without error 1`] = `
"Installing ts-dev-tools...
Symlinking dev dependencies...
Symlinking dev dependencies done!
Resolving peer dependencies...
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
No duplicate dev dependencies found.
Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`Install command > should run update without error 1`] = `
"Updating ts-dev-tools installation...
Symlinking dev dependencies...
Symlinking dev dependencies done!
Resolving peer dependencies...
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
No duplicate dev dependencies found.
Check for duplicate dev dependencies done!
Installation done!"
`;
